[package]
name = "proxy-with-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["server", "http1"] }
hyper-tls = "0.5.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
